fix : comment organization error